--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <iframe style="border: none;" width="auto" height="auto"
+    <iframe style="border: none;" width="100%" height="100%"
         src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FlhMU4d4iYyh8zmsWVr4iaQ%2FRomance-x-Adidas-FIFA%3Ftype%3Ddesign%26mode%3Ddesign%26t%3DKsuZcJFCL5ZITM0V-1"
         allowfullscreen></iframe>
 </body>
