--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="description" content="" />
     <link rel="icon" href="favicon.png">
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <button class="learn-more"> Learn More
     </button>
-    <iframe style="border: none;" width="100vh" height="100vh"
+    <iframe style="border: none;" width="auto"
         src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FlhMU4d4iYyh8zmsWVr4iaQ%2FRomance-x-Adidas-FIFA%3Ftype%3Ddesign%26mode%3Ddesign%26t%3DKsuZcJFCL5ZITM0V-1"
         allowfullscreen></iframe>
 </body>
