--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 </head>
 
 <body>
-    <button class="learn-more"> Learn More
-    </button>
+    <button class="round">&#9998;</button>
     <iframe
         src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FlhMU4d4iYyh8zmsWVr4iaQ%2FRomance-x-Adidas-FIFA%3Ftype%3Ddesign%26mode%3Ddesign%26t%3DKsuZcJFCL5ZITM0V-1"
         allowfullscreen></iframe>
