--- a/index.html
+++ b/index.html
@@ -11,10 +11,14 @@
 </head>
 
 <body>
-    <button class="round">&#9998;</button>
-    <iframe
-        src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FlhMU4d4iYyh8zmsWVr4iaQ%2FRomance-x-Adidas-FIFA%3Ftype%3Ddesign%26mode%3Ddesign%26t%3DKsuZcJFCL5ZITM0V-1"
-        allowfullscreen></iframe>
+    <div class="container">
+        <div class="vertical-center">
+            <button class="round">&#21A2;</button>
+        </div>
+        <iframe
+            src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FlhMU4d4iYyh8zmsWVr4iaQ%2FRomance-x-Adidas-FIFA%3Ftype%3Ddesign%26mode%3Ddesign%26t%3DKsuZcJFCL5ZITM0V-1"
+            allowfullscreen></iframe>
+    </div>
 </body>
 
 </html>
