--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8" />
     <title>Romance FC x Adidas</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <link rel="icon" type="image/x-icon" href="./src/favicon-32x32.png">
+    <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <meta name="description" content="" />
     <link rel="icon" href="favicon.png">
     <link rel="stylesheet" href="styles.css">
@@ -13,7 +14,7 @@
 <body>
     <div class="container">
         <div class="vertical-center">
-            <button class="round">&#21A2;</button>
+            <button class="round">&#2190;</button>
         </div>
         <iframe
             src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FlhMU4d4iYyh8zmsWVr4iaQ%2FRomance-x-Adidas-FIFA%3Ftype%3Ddesign%26mode%3Ddesign%26t%3DKsuZcJFCL5ZITM0V-1"
