--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>Romance FC x Adidas</title>
+    <title>Romance FC x Adidas Figma Graphics</title>
     <link rel="icon" type="image/x-icon" href="./src/favicon-32x32.png">
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <meta name="description" content="" />
