--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <title>Romance FC x Adidas Figma Graphics</title>
-    <link rel="icon" type="image/x-icon" href="./src/favicon-32x32.png">
+    <link rel="icon" type="image/x-icon" href="./src/favicon.png">
     <meta name="viewport" content="width=device-width,initial-scale=1"/>
     <meta name="description" content="" />
     <link rel="icon" href="favicon.png">
@@ -15,13 +15,13 @@
     <div class="container">
         <div class="vertical-center">
             <a href="https://henhail.com/">
-                <button class="round">
-                    &#767</button>
+                <button class="round">&#8592;</button>
             </a>
         </div>
         <iframe
             src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Ffile%2FlhMU4d4iYyh8zmsWVr4iaQ%2FRomance-x-Adidas-FIFA%3Ftype%3Ddesign%26mode%3Ddesign%26t%3DKsuZcJFCL5ZITM0V-1%26hide-ui%3D1"
-            allowfullscreen></iframe>
+            allowfullscreen>
+        </iframe>
     </div>
 </body>
 
